--- a/websiteUsingBulma/index.html
+++ b/websiteUsingBulma/index.html
@@ -18,6 +18,9 @@
     <title>Title</title>
     <style>
         html { overflow-y: hidden; }
+        .navBar {
+            display: none !important;
+        }
     </style>
 
     <script>
@@ -143,9 +146,6 @@
             </div>
         </div>
     </div>
-<!--    <div class="basicFooter">-->
-<!--        *Objectively False-->
-<!--    </div>-->
     <!--        Snake Game Stuff-->
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" src="libraries/p5.dom.js"></script>
